06/01/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added insertUpdate and removeUpdate methods to the XMLDocumentListener
    * Updated XMLDocument to notify listeners on insert and remove events.

05/24/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated the minimum version of xerces needed to run jsXe to 2.8.
      Previously jsXe had been checking for 2.7
    * Added a status bar to jsXe. This can be used in the future to show info
      and messages to the user and can be used by plugins.
    * Added properties for setting the fonts used in jsXe's appearance.

04/18/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Made some GUI tweaks to the splash screen.
    * Made some tweaks to how the serializer formats XML Documents
    * Fixed bug 1467968: Splitting CDATA tags doesn't work

04/08/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated support for different encodings. Now jsXe will support all
      encodings that the JVM being used supports. jsXe now opens documents
      properly by examining the files for UTF file markers or the encoding
      in the XML declaration. jsXe will now save files properly and write
      the correct encoding in the xml declaration.
    * Added built-in completion support for XML Schema, XHTML, XSLT, and XSL:FO

04/07/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added a null menu item to the recent files menu for when there are
      no recent files in the list.
    * Added an option to allow the user to specify the line separator.

03/16/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added a URI to the XMLDocument class to allow the XMLDocument to know
      where the document is located.
    * Added some framework for support introspection for built in document
      types.

02/06/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated to work with xerces 2.8.0

02/19/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Released 0.4 pre3