@@ -46,6 +46,9 @@ import org.w3c.dom.NodeList;
 
 //}}}
 
+/**
+ * @deprecated
+ */
 public interface AdapterNodeListener {
     
     //{{{ nodeAdded()
